--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Build-Depends: ant-optional,
 Build-Depends-Indep: javahelper,
                      junit4,
                      libcglib-java,
-                     libeasymock-java,
+                     libeasymock-java (>= 3.0),
                      libecj-java,
                      libhamcrest-java (>= 1.3),
                      libjakarta-taglibs-standard-java,
