--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: java
 Priority: optional
 Maintainer: Debian Java Maintainers <pkg-java-maintainers@lists.alioth.debian.org>
 Uploaders: James Page <james.page@ubuntu.com>,
-           Miguel Landaeta <miguel@miguel.cc>,
+           Miguel Landaeta <nomadium@debian.org>,
            tony mancill <tmancill@debian.org>,
            Jakub Adam <jakub.adam@ktknet.cz>,
            Emmanuel Bourg <ebourg@apache.org>
