--- a/debian/control
+++ b/debian/control
@@ -29,7 +29,7 @@ Homepage: http://tomcat.apache.org
 
 Package: tomcat8-common
 Architecture: all
-Depends: default-jre-headless | java7-runtime-headless | java7-runtime | java-7-runtime,
+Depends: default-jre-headless | java7-runtime-headless | java7-runtime,
          libtomcat8-java (>= ${source:Version}),
          ${misc:Depends}
 Description: Apache Tomcat 8 - Servlet and JSP engine -- common files
