--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 
-JAVA_HOME := /usr/lib/jvm/default-java
+JAVA_HOME=/usr/lib/jvm/java-7-openjdk-$(shell dpkg-architecture -qDEB_BUILD_ARCH)
 JAVA_CMD := $(JAVA_HOME)/bin/java
 BLDLIB := output/build/lib
 DEB_JARS_BASE := /usr/share/java
