--- a/debian/control
+++ b/debian/control
@@ -12,11 +12,11 @@ Build-Depends: ant-optional,
                openjdk-7-jdk,
                po-debconf
 Build-Depends-Indep: javahelper,
-                     junit4 (>= 4.11),
-                     libcglib-nodep-java,
-                     libeasymock-java (>= 3.0),
+                     junit4,
+                     libcglib-java,
+                     libeasymock-java,
                      libecj-java (>= 3.11.0),
-                     libhamcrest-java (>= 1.3),
+                     libhamcrest-java (>= 1.2),
                      libtaglibs-standard-spec-java,
                      libtaglibs-standard-impl-java,
                      libtcnative-1,
