--- a/debian/control
+++ b/debian/control
@@ -14,9 +14,9 @@ Build-Depends: ant-optional,
 Build-Depends-Indep: javahelper,
                      junit4,
                      libcglib-java,
-                     libeasymock-java (>= 3.0),
+                     libeasymock-java,
                      libecj-java,
-                     libhamcrest-java (>= 1.3),
+                     libhamcrest-java (>= 1.2),
                      libjakarta-taglibs-standard-java,
                      libjstl1.1-java,
                      libobjenesis-java,
