--- a/debian/control
+++ b/debian/control
@@ -12,11 +12,11 @@ Build-Depends: ant-optional,
                openjdk-7-jdk,
                po-debconf
 Build-Depends-Indep: javahelper,
-                     junit4 (>= 4.11),
-                     libcglib3-java,
-                     libeasymock-java (>= 3.0),
+                     junit4,
+                     libcglib-java,
+                     libeasymock-java,
                      libecj-java (>= 3.10.0),
-                     libhamcrest-java (>= 1.3),
+                     libhamcrest-java (>= 1.2),
                      libjakarta-taglibs-standard-java,
                      libjstl1.1-java,
                      libobjenesis-java,
