--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Build-Depends: ant-optional,
                default-jdk,
                po-debconf
 Build-Depends-Indep: javahelper,
-                     junit4,
+                     junit4 (>= 4.11),
                      libcglib-java,
                      libeasymock-java (>= 3.0),
                      libecj-java,
