--- a/debian/rules
+++ b/debian/rules
@@ -61,7 +61,7 @@ ifeq (,$(findstring nocheck, $(DEB_BUILD_OPTIONS)))
 else
 	$(ANT_INVOKE) deploy
 endif
-	javadoc -subpackages "javax.servlet:javax.el:javax.websocket" -d "output/api" \
+	$(JAVA_HOME)/bin/javadoc -subpackages "javax.servlet:javax.el:javax.websocket" -d "output/api" \
 		-sourcepath "java" -author -version -breakiterator \
 		-windowtitle "Tomcat API Documentation" -doctitle "Tomcat API" \
 		-bottom "Copyright &#169; 2000-2014 The Apache Software Foundation. All Rights Reserved."
