Imported Upstream version 8.0.18

--- a/java/org/apache/catalina/startup/LocalStrings.properties
+++ b/java/org/apache/catalina/startup/LocalStrings.properties
@@ -127,11 +127,12 @@ versionLoggerListener.serverInfo.server.number =Server number:         {0}
 versionLoggerListener.os.name                  =OS Name:               {0}
 versionLoggerListener.os.version               =OS Version:            {0}
 versionLoggerListener.os.arch                  =Architecture:          {0}
-versionLoggerListener.java.home                =JAVA_HOME:             {0}
+versionLoggerListener.java.home                =Java Home:             {0}
 versionLoggerListener.vm.version               =JVM Version:           {0}
 versionLoggerListener.vm.vendor                =JVM Vendor:            {0}
 versionLoggerListener.catalina.base            =CATALINA_BASE:         {0}
 versionLoggerListener.catalina.home            =CATALINA_HOME:         {0}
-versionLoggerListener.env                      =Environment variable:  {0} = {1}
 versionLoggerListener.arg                      =Command line argument: {0}
+versionLoggerListener.env                      =Environment variable:  {0} = {1}
+versionLoggerListener.prop                     =System property:       {0} = {1}
 webAnnotationSet.invalidInjection=Invalid method resource injection annotation.
