--- a/debian/rules
+++ b/debian/rules
@@ -6,10 +6,6 @@ BLDLIB := output/build/lib
 # Upstream version
 VERSION := $(shell dpkg-parsechangelog --show-field Version | sed 's/-[^-]*$$//' | sed 's/~/-/')
 
-# root webapp file locations (during the build)
-RWLOC := debian/default_root
-RWFILES := $(RWLOC)/index.html $(RWLOC)/META-INF/context.xml
-
 # Add distribution.name as system property to grab it when showing version
 TOMCAT_DISTRIBUTION := "$(shell lsb_release -si)"
 
@@ -54,7 +50,7 @@ override_dh_install-indep:
 	
 	# update the checksum for the root webapp
 	unset rwmd5sum \
-		&& rwmd5sum=`cat $(RWFILES) | md5sum - 2>/dev/null | cut -d " " -f1` \
+		&& rwmd5sum=`cat debian/default_root/index.html debian/default_root/META-INF/context.xml | md5sum - 2>/dev/null | cut -d " " -f1` \
 		&& sed "s/\@ROOT_WEBAPP_MD5SUM\@/$$rwmd5sum/" debian/tomcat8.postrm.in > debian/tomcat8.postrm
 	
 	jh_manifest
