--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Build-Depends-Indep: javahelper,
                      lsb-release,
                      maven-repo-helper
 Standards-Version: 3.9.8
-Vcs-Git: git://anonscm.debian.org/pkg-java/tomcat8.git
+Vcs-Git: https://anonscm.debian.org/git/pkg-java/tomcat8.git
 Vcs-Browser: https://anonscm.debian.org/cgit/pkg-java/tomcat8.git
 Homepage: http://tomcat.apache.org
 
