Removed the default 128M heap limit (LP: #568823)

--- a/debian/tomcat8.config
+++ b/debian/tomcat8.config
@@ -5,7 +5,7 @@ set -e
 . /usr/share/debconf/confmodule
 
 CONFFILE="/etc/default/tomcat8"
-JAVA_OPTS="-Djava.awt.headless=true -Xmx128m"
+JAVA_OPTS="-Djava.awt.headless=true"
 
 if [ -e "${CONFFILE}" ]
 then
