--- a/debian/rules
+++ b/debian/rules
@@ -27,8 +27,8 @@ override_dh_auto_build:
 override_dh_auto_test:
 ifeq (,$(findstring nocheck, $(DEB_BUILD_OPTIONS)))
 	mkdir -p webapps/examples/WEB-INF/lib
-	cp /usr/share/java/jstl1.1.jar webapps/examples/WEB-INF/lib/jstl.jar
-	cp /usr/share/java/standard.jar webapps/examples/WEB-INF/lib/standard.jar
+	cp /usr/share/java/taglibs-standard-spec.jar webapps/examples/WEB-INF/lib/
+	cp /usr/share/java/taglibs-standard-impl.jar webapps/examples/WEB-INF/lib/
 	$(ANT) test
 endif
 
