Moved the generated catalina.policy file to /var/lib/tomcat8/policy

--- a/debian/tomcat8.postrm.in
+++ b/debian/tomcat8.postrm.in
@@ -8,6 +8,7 @@ LR_CONFFILE=/etc/logrotate.d/tomcat8
 
 # Remove cached files and auto-generated catalina.policy
 rm -rf /var/cache/tomcat8/*
+rm -rf /var/lib/tomcat8/policy
 
 case "$1" in
     remove)
