Promoted libtcnative-1 from suggested to recommended dependency

--- a/debian/control
+++ b/debian/control
@@ -43,9 +43,8 @@ Description: Apache Tomcat 8 - Servlet and JSP engine -- common files
 Package: tomcat8
 Architecture: all
 Depends: adduser, tomcat8-common (>= ${source:Version}), ucf, ${misc:Depends}
-Recommends: authbind
-Suggests: libtcnative-1 (>= 1.1.30),
-          tomcat8-admin (>= ${source:Version}),
+Recommends: authbind, libtcnative-1 (>= 1.2.6~)
+Suggests: tomcat8-admin (>= ${source:Version}),
           tomcat8-docs (>= ${source:Version}),
           tomcat8-examples (>= ${source:Version}),
           tomcat8-user (>= ${source:Version})
